--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="./brand.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fashion Fusion</title>
+    <link rel="stylesheet" href="./index.css">
   </head>
-  <body>
+  <body >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
